feat(ByteCodeGenerator): 修复delete多维数组时地址不合法的问题